--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/AccountManagement/account-management-list/account-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/AccountManagement/account-management-list/account-management-list.component.html
@@ -1,10 +1,10 @@
 <div class="card card-custom gutter-b">
   <div class="card-header">
     <div class="card-title">
-      <span class="card-label">Danh sách người dùng</span>
+      <span class="card-label">DANH SÁCH NGƯỜI DÙNG</span>
     </div>
     <div class="card-toolbar">
-      <button type="button" class="btn jee-btn btn-themmoi-blue" (click)="create()">Thêm mới</button>
+      <button mat-button class="ja_button ja_btn-addnew" (click)="create()">Thêm mới</button>
     </div>
   </div>
   <!-- body -->
@@ -13,7 +13,7 @@
       <table mat-table class=" table table-head-custom table-vertical-center overflow-hidden " [dataSource]="dataSource"
         matSort matSortActive="Fullname" matSortDirection="asc" matSortDisableClear>
         <ng-container matColumnDef="NhanVien">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          <th *matHeaderCellDef>
             <span>Nhân viên</span>
           </th>
           <td mat-cell *matCellDef="let r">
@@ -32,10 +32,10 @@
         </ng-container>
 
         <ng-container matColumnDef="TenDangNhap">
-          <th mat-header-cell *matHeaderCellDef>
+          <th *matHeaderCellDef>
             <span>Tên đăng nhập</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
+          <td mat-cell *matCellDef="let r">
             <div class>
               <span *ngIf="r.Username != ''">{{ r.Username }}</span>
             </div>
@@ -43,19 +43,19 @@
         </ng-container>
 
         <ng-container matColumnDef="ChucVu">
-          <th mat-header-cell *matHeaderCellDef>
+          <th *matHeaderCellDef>
             <span>Chức vụ</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
+          <td mat-cell *matCellDef="let r">
             <span *ngIf="r.Jobtitle != ''">{{ r.Jobtitle }}</span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="QuanLyTrucTiep">
-          <th mat-header-cell *matHeaderCellDef style="text-align: center">
+          <th *matHeaderCellDef style="text-align: center">
             <span>Quản lý trực tiếp</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r" style="text-align: center; padding-right: 12px;">
+          <td mat-cell *matCellDef="let r" style="text-align: center;">
             <div style="cursor: pointer;" (click)="openQuanLyTrucTiepEdit(r.Username, r.DirectManager)">
               <span *ngIf="r.DirectManager != ''">{{ r.DirectManager }}</span>
               <span *ngIf="r.DirectManager == ''">
@@ -66,40 +66,34 @@
         </ng-container>
 
         <ng-container matColumnDef="TinhTrang">
-          <th mat-header-cell *matHeaderCellDef>
+          <th *matHeaderCellDef style="text-align: center">
             <span>Tình trạng</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
-            <mat-slide-toggle class="example-margin" (toggleChange)="changeTinhTrang(r.Username)"
-              [checked]="r.IsActive">
+          <td mat-cell *matCellDef="let r" style="text-align: center">
+            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.Username)" [checked]="r.IsActive">
             </mat-slide-toggle>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="GhiChu">
-          <th mat-header-cell *matHeaderCellDef>
+          <th *matHeaderCellDef>
             <span>Ghi chú</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
+          <td mat-cell *matCellDef="let r">
             <span>{{ r.Note }}</span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="ThaoTac">
-          <th mat-header-cell *matHeaderCellDef>
+          <th *matHeaderCellDef style="text-align: center">
             <span>Thao tác</span>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <a title="Edit customer" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3">
-              <span [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
-                class="svg-icon svg-icon-md svg-icon-primary">
-              </span>
-            </a>
-            <a title="Delete customer" class="btn btn-icon btn-light btn-hover-danger btn-sm">
-              <span [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'"
-                class="svg-icon svg-icon-md svg-icon-danger">
-              </span>
-            </a>
+          <td mat-cell *matCellDef="let r" style="text-align: center">
+            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1BC5BD; font-size:16px" aria-hidden="false">
+              mode_edit</mat-icon>
+            &nbsp;
+            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size:16px" aria-hidden="false">delete
+            </mat-icon>
           </td>
         </ng-container>
 
