--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/DepartmentManagement/department-management-list/department-management-list.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/DepartmentManagement/department-management-list/department-management-list.component.html
@@ -1,23 +1,23 @@
 <div class="card card-custom gutter-b">
   <div class="card-header">
     <div class="card-title">
-      <span class="card-label">Danh sách phòng ban, nhóm</span>
+      <span class="card-label">DANH SÁCH PHÒNG BAN, NHÓM</span>
     </div>
     <div class="card-toolbar">
-      <button type="button" class="btn jee-btn btn-themmoi-blue" (click)="create()">Thêm mới</button>
+      <button mat-button class="ja_button ja_btn-addnew" (click)="create()">Thêm mới</button>
     </div>
   </div>
   <!-- body -->
   <div class="card-body">
     <div class="table-responsive angular-bootstrap-table" [ngStyle]="{ height: getHeight() }">
       <table mat-table class=" table table-head-custom table-vertical-center overflow-hidden " [dataSource]="dataSource"
-             matSort matSortActive="Fullname" matSortDirection="asc" matSortDisableClear>
+        matSort matSortActive="Fullname" matSortDirection="asc" matSortDisableClear>
 
         <ng-container matColumnDef="PhongBan">
           <th mat-header-cell *matHeaderCellDef>
             <span>Phòng ban</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
+          <td mat-cell *matCellDef="let r">
             <div class>
               <span>{{ r.DepartmentName }}</span>
             </div>
@@ -27,21 +27,20 @@
           <th mat-header-cell *matHeaderCellDef>
             <span>Quản lý nhóm</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
+          <td mat-cell *matCellDef="let r">
             <span *ngIf="r.DepartmentManager != ''">{{ r.DepartmentManager }}</span>
             <span *ngIf="r.DepartmentManager == ''">
-                        <mat-icon>person_add</mat-icon>
-                        </span>
+              <mat-icon>person_add</mat-icon>
+            </span>
           </td>
         </ng-container>
 
         <ng-container matColumnDef="TinhTrang">
-          <th mat-header-cell *matHeaderCellDef>
+          <th mat-header-cell *matHeaderCellDef style="text-align: center">
             <span>Tình trạng</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
-            <mat-slide-toggle class="example-margin" (toggleChange)="changeTinhTrang(r.Username)"
-                              [checked]="r.IsActive">
+          <td mat-cell *matCellDef="let r" style="text-align: center">
+            <mat-slide-toggle class="example-margin" (click)="changeTinhTrang(r.RowID)" [checked]="r.IsActive">
             </mat-slide-toggle>
           </td>
         </ng-container>
@@ -50,38 +49,33 @@
           <th mat-header-cell *matHeaderCellDef>
             <span>Ghi chú</span>
           </th>
-          <td class="jee-content" mat-cell *matCellDef="let r">
+          <td mat-cell *matCellDef="let r">
             <span>{{ r.Note }}</span>
           </td>
         </ng-container>
         <ng-container matColumnDef="ThaoTac">
-          <th mat-header-cell *matHeaderCellDef>
+          <th mat-header-cell *matHeaderCellDef style="text-align: center">
             <span>Thao tác</span>
           </th>
-          <td mat-cell *matCellDef="let r">
-            <a title="Edit customer" class="btn btn-icon btn-light btn-hover-primary btn-sm mx-3">
-                <span [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
-                      class="svg-icon svg-icon-md svg-icon-primary">
-                </span>
-            </a>
-            <a title="Delete customer" class="btn btn-icon btn-light btn-hover-danger btn-sm">
-                <span [inlineSVG]="'./assets/media/svg/icons/General/Trash.svg'"
-                      class="svg-icon svg-icon-md svg-icon-danger">
-                </span>
-            </a>
+          <td mat-cell *matCellDef="let r" style="text-align: center">
+            <mat-icon (click)="update(r)" style="cursor: pointer; color: #1BC5BD; font-size:16px" aria-hidden="false">
+              mode_edit</mat-icon>
+            &nbsp;
+            <mat-icon (click)="delete(r)" style="cursor: pointer; color: red; font-size:16px" aria-hidden="false">delete
+            </mat-icon>
           </td>
         </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns" (click)="row.highlighted = !row.highlighted;"
-            [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }" (mouseover)="row.hovered = true"
-            (mouseout)="row.hovered = false"></tr>
+          [ngClass]="{ hovered: row.hovered, highlighted: row.highlighted }" (mouseover)="row.hovered = true"
+          (mouseout)="row.hovered = false"></tr>
       </table>
     </div>
     <!-- start: BOTTOM -->
     <div class="mat-table__bottom">
       <mat-spinner [diameter]="20" *ngIf="dataSource.loading$| async"></mat-spinner>
       <mat-paginator [pageSize]="pageSize" [pageSizeOptions]="[10, 20, 50, 100]"
-                     [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
+        [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
     </div>
     <!-- end: BOTTOM -->
   </div>
