--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/page-girdters-dashboard.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/page-girdters-dashboard.component.html
@@ -1,34 +1,25 @@
-<div class="gridster-container">
+<div class="gridster-container" height="900px">
   <gridster [options]="options">
     <gridster-item [item]="widget" *ngFor="let widget of dashboard">
-      <div class=" widget-header" (mouseover)="getShowSetting(widget.id, true)"
-        (mouseout)="getShowSetting(widget.id, false)">
+      <div class=" widget-header">
         <div class="drag-handler widget-header-child widget-header-title">
           {{widget.name}}
         </div>
-        <div *ngIf="widget.id == 1" class="widget-header-child widget-header-right">
-          <button mat-icon-button type="button" (click)="closeWidget(widget.id)">
-            <span class="material-icons" style="font-size: 1.8rem;"> close </span>
-          </button>
+        <div class="widget-header-child">
+          <button mat-button class="btn btn-light" style="color: #62A4FF">
+            Bộ lọc
+          </button>&nbsp;&nbsp;
         </div>
-        <div *ngIf="widget.id == 3" class="widget-header-child widget-header-right">
-          <button [hidden]="!showSetting[widget.id]" mat-icon-button type="button" (click)="closeWidget(widget.id)">
-            <span class="material-icons" style="font-size: 1.8rem;"> close </span>
-          </button>
+        <div class="widget-header-child">
+          <button mat-button class="btn btn-light" style="color: #62A4FF">
+            + Thêm mới
+          </button>&nbsp;&nbsp;
         </div>
-        <div *ngIf="widget.id == 4" class="widget-header-child widget-header-right">
-          <button [hidden]="!showSetting[widget.id]" mat-icon-button type="button" (click)="closeWidget(widget.id)">
-            <span class="material-icons" style="font-size: 1.8rem;"> close </span>
-          </button>
-        </div>
-        <div *ngIf="widget.id == 5" class="widget-header-child widget-header-right">
-          <button [hidden]="!showSetting[widget.id]" mat-icon-button type="button" (click)="closeWidget(widget.id)">
-            <span class="material-icons" style="font-size: 1.8rem;"> close </span>
-          </button>
-        </div>
-        <div *ngIf="widget.id == 6" class="widget-header-child widget-header-right">
-          <button [hidden]="!showSetting[widget.id]" mat-icon-button type="button" (click)="closeWidget(widget.id)">
-            <span class="material-icons" style="font-size: 1.8rem;"> close </span>
+        <div class="widget-header-child widget-header-right">
+          <button mat-icon-button (click)="closeWidget(widget.id)" class="btn btn-light">
+            <span class="material-icons"
+              style="font-size: 2.4rem !important; font-weight: 500; padding-bottom: 5.5px; color: #707070">
+              close </span>
           </button>
         </div>
       </div>
