--- a/BackEnd/JeeAccount/src/assets/sass/components/_card.scss
+++ b/BackEnd/JeeAccount/src/assets/sass/components/_card.scss
@@ -13,24 +13,20 @@
     justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
-    height: $jee-card-header-height;
+    //height: $card-header-height;
+    min-height: $card-header-height;
     padding-top: 0;
     padding-bottom: 0;
-    padding-left: 0;
-    padding-right: 0;
     background-color: transparent;
-    margin: 0;
-    margin-left: 20px;
-    align-content: center;
 
     // Title
     .card-title {
+      font-family: 'Roboto';
       display: flex;
       align-items: center;
-      margin-top: 20px;
-      margin-bottom: 20px;
-      margin-right: 0;
+      margin: $card-header-spacer-y;
       margin-left: 0;
+      //flex-wrap: wrap;
 
       .card-icon {
         margin-right: 0.75rem;
@@ -55,15 +51,14 @@
 
       &,
       .card-label {
-        font-size: 14px;
+        font-weight: 500;
+        font-size: 1.275rem;
         color: $dark;
-        text-transform: uppercase;
       }
 
       .card-label {
-        font-size: 14px;
-        color: $dark;
-        text-transform: uppercase;
+        margin: 0 0.75rem 0 0;
+        flex-wrap: wrap;
       }
 
       // Description
@@ -77,7 +72,7 @@
     .card-toolbar {
       display: flex;
       align-items: center;
-      margin: 0;
+      margin: $card-header-spacer-y 0;
       flex-wrap: wrap;
     }
 
