--- a/BackEnd/JeeAccount/src/assets/style-css/css-general.scss
+++ b/BackEnd/JeeAccount/src/assets/style-css/css-general.scss
@@ -1,29 +1,30 @@
 //=======================CSS BUTTON======================
 .ja_button {
-    font-family: 'Roboto';
-    font-weight: 400;
-    font-size: 1.02rem;//12pt;
-    padding: 5px 20px 5px 20px; //top right botton left
-    border: 0.5;
-    border-color: #D1D1D1;
-    border-radius: 3px;
-    margin: 20px 20px 20px 20px; 
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 1.02rem; //12pt;
+  padding: 5px 20px 5px 20px; //top right botton left
+  border: 0.5;
+  border-color: #d1d1d1;
+  border-radius: 3px;
+  margin: 20px 20px 20px 20px;
 }
 
 .ja_btn-addnew {
-    background-color: #3699ff;
+  background-color: #3699ff;
+  color: #ffffff;
+  &:hover {
     color: #ffffff;
-    &:hover {
-        background-color: #0e72d8;
-    } 
+    background-color: #0e72d8;
+  }
 }
 
 .ja_btn-dropdown {
   background-color: #1bc5bd;
   color: #ffffff;
   &:hover {
-      background-color: #0bb7af;
-  } 
+    background-color: #0bb7af;
+  }
 }
 
 .ja_btn-addcontinue {
@@ -31,20 +32,20 @@
   color: #ffffff;
 
   &:hover {
-      background-color: #0bb7af;
-  } 
+    background-color: #0bb7af;
+  }
 }
 
 .ja_btn-goback {
-    background-color: #ffffff; 
-    color: #5f5f5f;
-    &:hover {
-        background-color: #e4e6ef;
-    } 
+  background-color: #e4e6ef !important;
+  color: #5f5f5f;
+  &:hover {
+    background-color: #e4e6ef;
+  }
 }
 
 .icon-repeat2 {
-  background: url("/src/assets/media/svg/icons/Clothes/Hat.svg") no-repeat top left;
+  background: url('/src/assets/media/svg/icons/Clothes/Hat.svg') no-repeat top left;
   background-size: contain;
   cursor: pointer;
   display: inline-block;
@@ -66,80 +67,85 @@
 
 //====================CSS FOR TEXTBOX=========================
 .ja_textbox {
-    font-family: 'Roboto';
-    max-width: 300px;
+  font-family: 'Roboto';
+  max-width: 300px;
 }
 
 //Đã nhập
-body .mat-form-field  {
-    .input-thuong {              //input thường đã nhập
-      color: #808080;
-      font-family: 'Roboto';
-      font-size: 11pt;
-      // padding: 5px 0px 5px 0px;
-      // margin-bottom: 8px;
-      max-width: 300px;
-      // height: 40px;
-    }
-    .input-batbuoc {            //input bắt buộc đã nhập
-      color: #0e72d8;
-      font-family: 'Roboto';
-      font-size: 11pt;
-      // padding: 5px 0px 5px 0px;
-      // margin-bottom: 8px;
-      max-width: 300px;
-      // height: 40px;
-    }
-    .mat-form-field-label {
-      color: #808080;
-      font-family: 'Roboto';
-      font-size: 9pt;
-      padding: 0px 0px 5px 0px;
-    }
-    // .mat-form-field-underline {
-    //   background-color: #808080;
-    // }
-    .mat-form-field-ripple {    //underline
-      background-color: #808080;
-    }
-    .mat-form-field-required-marker {
-      color: #808080;
-    }
+body .mat-form-field {
+  .input-thuong {
+    //input thường đã nhập
+    color: #808080;
+    font-family: 'Roboto';
+    font-size: 11pt;
+    // padding: 5px 0px 5px 0px;
+    // margin-bottom: 8px;
+    max-width: 300px;
+    // height: 40px;
+  }
+  .input-batbuoc {
+    //input bắt buộc đã nhập
+    color: #0e72d8;
+    font-family: 'Roboto';
+    font-size: 11pt;
+    // padding: 5px 0px 5px 0px;
+    // margin-bottom: 8px;
+    max-width: 300px;
+    // height: 40px;
+  }
+  .mat-form-field-label {
+    color: #808080;
+    font-family: 'Roboto';
+    font-size: 9pt;
+    padding: 0px 0px 5px 0px;
+  }
+  // .mat-form-field-underline {
+  //   background-color: #808080;
+  // }
+  .mat-form-field-ripple {
+    //underline
+    background-color: #808080;
+  }
+  .mat-form-field-required-marker {
+    color: #808080;
+  }
 }
 
 //Đang nhập
 body .mat-form-field.mat-focused {
-    .input-thuong {  //input thường đã nhập
-      color: #000000;
-    }
-    .input-batbuoc {             //input bắt buộc đã nhập
-      color: #0e72d8;
-    }
-    .mat-form-field-label {
-      color: #3699FF;
-    }
-    .mat-form-field-ripple {
-      background-color: #3699FF;
-    }
-    .mat-form-field-required-marker {
-      color: #3699FF;
-    }   
+  .input-thuong {
+    //input thường đã nhập
+    color: #000000;
+  }
+  .input-batbuoc {
+    //input bắt buộc đã nhập
+    color: #0e72d8;
+  }
+  .mat-form-field-label {
+    color: #3699ff;
+  }
+  .mat-form-field-ripple {
+    background-color: #3699ff;
+  }
+  .mat-form-field-required-marker {
+    color: #3699ff;
+  }
 }
 
 //Error cho textbox bắt buộc nhập
 body .mat-form-field.mat-form-field-invalid {
-    .mat-input-element {
+  .mat-input-element {
+    color: #f64e60;
+  }
+  .mat-form-field-label {
+    color: #f64e60;
+    .mat-form-field-required-marker {
       color: #f64e60;
     }
-    .mat-form-field-label {
-      color: #f64e60;
-      .mat-form-field-required-marker {
-        color: #f64e60;
-      }
-    }
-    .mat-form-field-ripple {
-      background-color: #f64e60;
-    }
+  }
+  .mat-form-field-ripple {
+    background-color: #f64e60;
+  }
 }
 
 //==========================================================
@@ -150,7 +156,8 @@ body .mat-form-field.mat-form-field-invalid {
   color: #16a850;
 }
 
-.dialog-footer { //dùng với tag div, ko dùng với tag ng-container
+.dialog-footer {
+  //dùng với tag div, ko dùng với tag ng-container
   display: flex;
   justify-content: flex-end;
   padding-bottom: 20px;
@@ -159,13 +166,13 @@ body .mat-form-field.mat-form-field-invalid {
 //==========================================================
 //CSS thao tác
 .color_more {
-  color: #3699ff
+  color: #3699ff;
 }
 .color_edit {
-  color: #1bc5bd
+  color: #1bc5bd;
 }
 .color_del {
-  color: rgb(255, 47, 47) //chưa chắc
+  color: rgb(255, 47, 47); //chưa chắc
 }
 .color_info {
   color: #808080;
@@ -180,14 +187,16 @@ body .mat-checkbox {
   border-radius: 5px;
 }
 
-.mat-checkbox-checked.mat-accent .mat-checkbox-background{ //set color when checkbox checked and enabled
-  background-color:#3699FF !important;
+.mat-checkbox-checked.mat-accent .mat-checkbox-background {
+  //set color when checkbox checked and enabled
+  background-color: #3699ff !important;
 }
 // .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background { //checkbox trạng thái chính giữa
 //   background-color:#808080 !important;
 // }
-.mat-accent.mat-checkbox-disabled .mat-checkbox-background { //set color when checkbox disabled
-  background-color:#a5a5a5 !important;
+.mat-accent.mat-checkbox-disabled .mat-checkbox-background {
+  //set color when checkbox disabled
+  background-color: #a5a5a5 !important;
 }
 //==========================================================
 .icon-dynamic-search {
@@ -215,11 +224,12 @@ body .mat-checkbox {
   color: rgb(243, 160, 7);
   border: 0.5;
   background-color: #e2e2e2; //808080 quá đậm
-  border-color: #D1D1D1;
+  border-color: #d1d1d1;
 }
 
-body .mat-select-required .mat-select-value { //change color mat-select value required
-  color: #3699FF !important;
+body .mat-select-required .mat-select-value {
+  //change color mat-select value required
+  color: #3699ff !important;
 }
 //==========================================================
 .icon-calendar {
@@ -235,12 +245,12 @@ body .mat-select-required .mat-select-value { //change color mat-select value re
   padding-top: 7px;
 }
 
-body .kt-portlet .kt-portlet__body{
+body .kt-portlet .kt-portlet__body {
   padding: 20px; //0px 20px => top, bot: 0, left, right: 25
 }
 
-.kt-portlet__head--lg{
-	padding-top: 9px;
+.kt-portlet__head--lg {
+  padding-top: 9px;
   padding-bottom: 9px;
 }
 
