--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-dialog/account-management-edit-dialog.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/Management/AccountManagement/account-management-edit-dialog/account-management-edit-dialog.component.html
@@ -1,131 +1,112 @@
-<div class="m-portlet">
-  <div class="m-portlet__head">
-    <div class="m-portlet__head-title">
-      <div class="row" style="display: inline">
-        <h5 class="m-portlet__head-text">
-          <span class="dialog-title">Thêm mới tài khoản sử dụng</span>
-          <button mat-button style="float: right; margin: 0" class="ja_button mat-button ja_btn-addnew"
-            (click)="onSubmit()">Thêm</button>
-          <button mat-button style="float: right; margin: 0; margin-right: 12px;"
-            class="ja_button mat-button ja_btn-goback" (click)="goBack()">Đóng</button>
-        </h5>
-      </div>
+<div class="modal-content">
+  <div class="modal-header">
+    <div class="modal-title h4" id="example-modal-sizes-title-lg">
+      <span class="dialog-title">{{'ACCOUNTMANAGEMENT.THEMMOITAIKHOAN' | translate}}</span>
+    </div>
+    <div class="modal-title" style="display: inline;">
+      <button mat-raised-button style="float: right; margin: 0" class="ja_btn-addnew  "
+        (click)="onSubmit()">{{'COMMOM.LUU' | translate}}</button>
+      <button mat-raised-button style="float: right; margin: 0; margin-right: 12px;" class="ja_btn-goback "
+        (click)="goBack()">{{'COMMOM.TROLAI' | translate}}</button>
     </div>
   </div>
-  <div class="m-form m-form--fit m-form--label-align-right m-form--group-seperator-dashed">
-    <div class="m-portlet__body">
-      <form [formGroup]="itemForm" class="m-form m-form--group-seperator-dashed">
-        <div class="m-form__section m-form__section--first">
-          <div class="row m-form__group">
-            <div class="col-6 m--margin-bottom-10-mobile">
-              <div class="row">
-                <div class="col-md-8 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <input formControlName="AnhDaiDien" placeholder="Ảnh đại diện" matInput readonly>
-                  </mat-form-field>
-                </div>
-                <div class="col-md-4 m--margin-bottom-5-mobile">
-                  <input style="display: none;" accept="image/jpg, image/jpeg, image/png" formControlName="file"
-                    id="file" type="file" class="form-control" (change)="onFileChange($event)" #hiddenfileinput>
-                  <button mat-button class="ja_button mat-button ja_btn-addnew"
-                    (click)="hiddenfileinput.click()">Browse</button>
-                </div>
+  <div class="overlay overlay-block cursor-default modal-body overflow-auto">
+    <div class="min-height: 404px; max-height: 70vh;">
+      <form [formGroup]="itemForm" action="#" class="form form-label-right">
+        <div class="form-group row">
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-lg-8">
+                <mat-form-field class="example-full-width">
+                  <input formControlName="AnhDaiDien" placeholder="Ảnh đại diện" matInput readonly>
+                </mat-form-field>
               </div>
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <input class="require" formControlName="HoTen" placeholder="Họ và tên" matInput required>
-                  </mat-form-field>
-                </div>
+              <div class="col-lg-4">
+                <input style="display: none;" accept="image/jpg, image/jpeg, image/png" formControlName="file" id="file"
+                  type="file" class="form-control" (change)="onFileChange($event)" #hiddenfileinput>
+                <button mat-raised-button class="ja_button ja_btn-addnew"
+                  (click)="hiddenfileinput.click()">Browse</button>
               </div>
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <input class="require" formControlName="Email" placeholder="Email" matInput required>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <mat-select formControlName="PhongBan" placeholder="Phòng ban" #singleSelect>
-                      <mat-option>
-                        <ngx-mat-select-search noEntriesFoundLabel="Không tìm thấy"
-                          placeholderLabel="Thêm quản phòng ban" formControlName="PhongBanFilterCtrl">
-                        </ngx-mat-select-search>
-                      </mat-option>
-                      <mat-option *ngFor="let phongban of filterPhongBans | async" [value]="phongban.RowID">
-                        {{phongban.DeparmentName}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <span matPrefix style=" color: #760b0b;">{{CompanyCode}}.</span>
-                    <input class="require" formControlName="TenDangNhap" placeholder="Tên đăng nhập" matInput required>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <input type="password" class="require" formControlName="MatKhau" placeholder="Mật khẩu" matInput
-                      required>
-                  </mat-form-field>
-                </div>
-              </div>
-              <!-- ================== -->
             </div>
-            <div class="col-6 m--margin-bottom-10-mobile">
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <img [src]="imgFile" style="width:auto; height:104px">
-                </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <mat-form-field class="example-full-width">
+                  <input class="input-batbuoc mat-focused" formControlName="HoTen" placeholder="Họ và tên" matInput
+                    required>
+                </mat-form-field>
               </div>
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <input formControlName="SoDienThoai" placeholder="Số điện thoại" matInput>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <input class="require" formControlName="ChucVu" placeholder="Chức vụ" matInput required>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class="row" style="margin-top: 53px">
-                <div class="col-md-12 m--margin-bottom-10-mobile">
-                  <mat-form-field class="mat-form-field-fluid">
-                    <input type="password" class="require" formControlName="NhapLaiMatKhau"
-                      placeholder="Nhập lại mật khẩu" matInput required>
-                  </mat-form-field>
-                </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12">
+                <mat-form-field class="example-full-width">
+                  <input class="input-batbuoc mat-focused" formControlName="SoDienThoai" placeholder="Số điện thoại"
+                    matInput>
+                </mat-form-field>
               </div>
             </div>
           </div>
-          <div class="row m-form__group">
-            <div class="col-12 m--margin-bottom-10-mobile">
-              <div style="padding-left: 12.5px;" class="row m--margin-bottom-20-mobile">
-                <span>Ứng dụng được sử dụng</span>
-              </div>
-              <div style="padding-left: 12.5px;" class="row m--margin-bottom-10-mobile">
-                <label formArrayName="AppsCheckbox" *ngFor="let app of AppsFromArray.controls; let i = index">
-                  <input type="checkbox" [formControlName]="i">
-                  {{listApp[i].AppName}} &nbsp; &nbsp;
-                </label>
-              </div>
-            </div>
+          <div class="col-lg-6">
+            <img [src]="imgFile" style="width:auto; height:160px">
+          </div>
+          <div class="col-lg-6">
+            <mat-form-field class="example-full-width">
+              <mat-select formControlName="PhongBan" placeholder="Phòng ban" #singleSelect>
+                <mat-option>
+                  <ngx-mat-select-search noEntriesFoundLabel="Không tìm thấy" placeholderLabel="Thêm quản phòng ban"
+                    formControlName="PhongBanFilterCtrl">
+                  </ngx-mat-select-search>
+                </mat-option>
+                <mat-option *ngFor="let phongban of filterPhongBans | async" [value]="phongban.RowID">
+                  {{phongban.DeparmentName}}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6">
+            <mat-form-field class="example-full-width">
+              <input class="input-batbuoc mat-focused" formControlName="ChucVu" placeholder="Chức vụ" matInput required>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6">
+            <mat-form-field class="example-full-width">
+              <span matPrefix style=" color: #760b0b;">{{CompanyCode}}.</span>
+              <input class="input-batbuoc mat-focused" formControlName="TenDangNhap" placeholder="Tên đăng nhập"
+                matInput required>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6">
+            <mat-form-field class="example-full-width">
+              <input class="input-batbuoc mat-focused" formControlName="Email" placeholder="Email" matInput required>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6">
+            <mat-form-field class="example-full-width">
+              <input type="password" class="require" formControlName="MatKhau" placeholder="Mật khẩu" matInput required>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-6">
+            <mat-form-field class="example-full-width">
+              <input type="password" class="require" formControlName="NhapLaiMatKhau" placeholder="Nhập lại mật khẩu"
+                matInput required>
+            </mat-form-field>
+          </div>
+          <div class="col-lg-12">
+            <span>Ứng dụng được sử dụng:</span>
+          </div>
+          <div class="col-lg-12">
+            <!-- <label formArrayName="AppsCheckbox" *ngFor="let app of AppsFromArray.controls; let i = index">
+              <input type="checkbox" [formControlName]="i">
+              {{listApp[i].AppName}} &nbsp; &nbsp;
+            </label> -->
+            <section class="example-section">
+              <mat-checkbox class="example-margin" formArrayName="AppsCheckbox"
+                *ngFor="let app of AppsFromArray.controls; let i = index" [formControlName]="i">
+                {{listApp[i].AppName}}
+              </mat-checkbox>
+            </section>
           </div>
         </div>
       </form>
-    </div>
-    <div class="m-portlet__foot m-portlet__no-border m-portlet__foot--fit text-right">
     </div>
   </div>
 </div>
