--- a/BackEnd/JeeAccount/src/assets/style-css/css-general.scss
+++ b/BackEnd/JeeAccount/src/assets/style-css/css-general.scss
@@ -1,27 +1,27 @@
 //=======================CSS BUTTON======================
 .ja_button {
   font-family: 'Roboto';
-  font-weight: 400;
-  font-size: 1.02rem; //12pt;
-  padding: 5px 20px 5px 20px; //top right botton left
-  border: 0.5;
-  border-color: #d1d1d1;
-  border-radius: 3px;
-  margin: 20px 20px 20px 20px;
+  font-weight: 400 ;
+  font-size: 1.02rem ; //12pt;
+  padding: 5px 20px 5px 20px ; //top right botton left
+  border: 0.5 ;
+  border-color: #d1d1d1 ;
+  border-radius: 3px ;
+  margin: 20px 20px 20px 20px ;
 }
 
 .ja_btn-addnew {
-  background-color: #3699ff;
-  color: #ffffff;
+  background-color: #3699ff ;
+  color: #ffffff ;
   &:hover {
-    color: #ffffff;
-    background-color: #0e72d8;
+    color: #ffffff ;
+    background-color: #0e72d8 ;
   }
 }
 
 .ja_btn-dropdown {
-  background-color: #1bc5bd;
-  color: #ffffff;
+  background-color: #1bc5bd ;
+  color: #ffffff ;
   &:hover {
     background-color: #0bb7af;
   }
@@ -37,7 +37,7 @@
 }
 
 .ja_btn-goback {
-  background-color: #e4e6ef !important;
+  background-color: #ffffff;
   color: #5f5f5f;
   &:hover {
     background-color: #e4e6ef;
