--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/widgets/danh-sach-truy-cap-nhanh/danh-sach-truy-cap-nhanh.component.html
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/page-girdters-dashboard/widgets/danh-sach-truy-cap-nhanh/danh-sach-truy-cap-nhanh.component.html
@@ -36,7 +36,7 @@
     margin: 0;
   }
 </style>
-<div class="card card-custom" style="color: #4169e1;">
+<!-- <div class="card card-custom" style="color: #4169e1;">
   <perfect-scrollbar class="m-scrollable m-scroller">
     <div class="m-form" *ngIf="listTruyCap.length > 0" style="display: grid;">
       <div class="row row-class" style="margin: 10px;">
@@ -62,4 +62,11 @@
       </div>
     </div>
   </perfect-scrollbar>
+</div> -->
+<div class="card card-custom">
+  <div class="modal-content">
+    <div class="card-body" style="padding: 0 !important;">
+      <app-jee-comment></app-jee-comment>
+    </div>
+  </div>
 </div>
