--- a/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.scss
+++ b/BackEnd/JeeAccount/src/app/pages/JeeAccount/_shared/jee-comment/jee-comment.scss
@@ -1,8 +1,7 @@
-
 $border-radius: 5px;
 $font-szie-header: 13px;
 $font-color-header: rbg(28, 30, 33);
-$hover-color-header:#f2f2f2;
+$hover-color-header: #f2f2f2;
 $background-top-header: white;
 
 .comment-container {
@@ -14,16 +13,15 @@ $background-top-header: white;
   direction: ltr;
   margin: 0px;
   border-radius: 0px 0px 10px 10px;
-  background-color:white;
+  background-color: white;
   display: block;
   line-height: 16.08px;
   padding: 0px 10px 4px 10px;
 }
 
-
 .comment-header-container {
-  font-family: 'Roboto';
-  background-color:$background-top-header;
+  font-family: "Roboto";
+  background-color: $background-top-header;
   align-items: stretch;
   box-sizing: border-box;
   direction: ltr;
@@ -49,7 +47,7 @@ $background-top-header: white;
     color: $font-color-header;
     font-size: $font-szie-header;
     padding: 6px 2px 6px 2px;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     #icon-comment {
       background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/mszNyGGthUg.png);
       background-position: 0px -134px;
@@ -70,7 +68,7 @@ $background-top-header: white;
 }
 
 .comment-content-container {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   position: relative;
   box-sizing: border-box;
   display: flex;
@@ -91,10 +89,9 @@ $background-top-header: white;
     align-items: center;
     font-size: 15px;
     font-weight: 500;
-    text-align:start;
+    text-align: start;
 
     .filter {
-
       .text-filter {
         color: rbg(101, 103, 107);
       }
@@ -132,98 +129,159 @@ $background-top-header: white;
     min-height: 44px;
     display: flex;
     flex-direction: row;
-    font-family: 'Roboto';
+    font-family: "Roboto";
     align-items: center;
     vertical-align: middle;
     font-size: 13px;
     direction: ltr;
+  }
 
-    .post-comment-avatar {
-      display: block;
-      position: relative;
+  .post-comment-avatar {
+    display: block;
+    position: relative;
+    margin-right: 6px;
+    align-self: flex-start;
+    margin-top: 6px;
+  }
+
+  #img-avatar {
+    border-radius: 50%;
+    width: 32px;
+    height: 32px;
+  }
+
+  .post-comment-input {
+    direction: ltr;
+    flex-grow: 1;
+    background-color: $hover-color-header;
+    font-family: "Roboto";
+    border-radius: 18px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    min-height: 36px;
+    display: flex;
+    cursor: text;
+    justify-content: flex-end;
+    position: relative;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .textarea-input {
+    font-weight: 400;
+    width: 100%;
+    resize: none;
+    border: none;
+    width: 100%;
+    height: 100%;
+    display: block;
+    border: 0;
+    box-sizing: border-box;
+    box-shadow: none;
+    outline: none;
+    overflow: hidden;
+    background-color: $hover-color-header;
+    flex-grow: 1;
+    flex-shrink: 1;
+    text-overflow: ellipsis;
+  }
+
+  .comment-icon {
+    direction: ltr;
+    display: flex;
+    align-items: center;
+    align-self: flex-end;
+    cursor: pointer;
+    margin-inline-end: 4px;
+    margin-inline-start: -8px;
+    margin-right: 4px;
+    margin-left: -8px;
+    margin-block-end: 0;
+    margin-block-start: 0;
+
+    .icon {
+      margin-left: 6px;
       margin-right: 6px;
-      align-self: flex-start;
-      margin-top: 6px;
+      margin-bottom: 6px;
+      width: 16px;
+      height: 16px;
     }
 
-    #img-avatar {
-      border-radius: 50%;
+    #input-flie {
+      display: none;
+    }
+  }
+
+  .post-comment-content {
+    margin-top: 6px;
+  }
+
+  .list-comment {
+    .icon-edit-report {
+      display: flex;
       width: 32px;
       height: 32px;
+      vertical-align: middle;
+      align-items: center;
+      justify-content: center;
+      margin-left: 5px;
+      margin-right: 5px;
     }
 
     .post-comment-input {
-      direction: ltr;
-      flex-grow: 1;
-      background-color: $hover-color-header;
-      font-family: 'Roboto';
-      border-radius: 18px;
-      padding-top: 6px;
-      padding-bottom: 6px;
-      min-height: 36px;
-      display: flex;
-      cursor: text;
-      justify-content: flex-end;
-      position: relative;
-      padding-right: 10px;
-      padding-left: 10px;
+      flex-grow: 0;
 
-        .textarea-input {
-          font-weight: 400;
-          width: 100%;
-          resize: none;
-          border: none;
-          width: 100%;
-          height: 100%;
-          display: block;
-          border: 0;
-          box-sizing: border-box;
-          box-shadow: none;
-          outline: none;
-          overflow: hidden;
-          background-color: $hover-color-header;
-          flex-grow: 1;
-          flex-shrink: 1;
-          text-overflow: ellipsis;
-        }
-
-        .comment-icon {
-          direction: ltr;
-          list-style-type: none;
-          margin: 0;
-          padding: 0;
-          display: flex;
-          align-items: center;
-          align-self: flex-end;
-          cursor: pointer;
-          margin-inline-end: 4px;
-          margin-inline-start: -8px;
-          margin-right: 4px;
-          margin-left: -8px;
-          margin-block-end: 0;
-          margin-block-start: 0;
-
-          .icon {
-            margin-left: 6px;
-            margin-right: 6px;
-            margin-bottom: 6px;
-            width: 16px;
-            height: 16px;
-          }
-
-
-          #input-flie {
-            display: none;
-          }
-        }
-
-
+      .post-comment-input-span {
+        font-weight: normal;
+        font-family: "Roboto";
+      }
     }
+  }
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
   }
 }
 
+
+.hover-icon :hover {
+  border-radius: 50%;
+  box-sizing: border-box;
+  box-shadow: 0 .5rem 0.5rem 0 rgba(5, 1, 1, 0);
+}
 
 .item-align-middle {
   vertical-align: middle;
 }
 
+#emotion-icon {
+  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/mszNyGGthUg.png);
+  background-position: 0px -346px;
+  background-size: auto;
+  width: 16px;
+  height: 16px;
+  background-repeat: no-repeat;
+  display: inline-block;
+}
+
+#image-icon {
+  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/yD/r/mszNyGGthUg.png);
+  background-position: 0px -295px;
+  background-size: auto;
+  width: 16px;
+  height: 16px;
+  background-repeat: no-repeat;
+  display: inline-block;
+}
+
+#edit-report-icon {
+  background-image: url(https://static.xx.fbcdn.net/rsrc.php/v3/y5/r/iK6-AgQFN6d.png);
+  background-position: -17px -366px;
+  background-size: auto;
+  width: 16px;
+  height: 16px;
+  background-repeat: no-repeat;
+  display: inline-block;
+}
